--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CrickActo",
+  "name": "react-redux",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "react": "18.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "react-native": "0.72.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.22.1"
+    "react-native-screens": "^3.22.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
