--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-community/datetimepicker": "^7.4.1",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "expo-font": "^11.4.0",
+    "expo-image-picker": "^14.3.1",
     "react-native": "0.72.3",
+    "react-native-drawer-layout": "^3.2.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.9.1",
