--- a/package.json
+++ b/package.json
@@ -20,18 +20,26 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "expo-checkbox": "~2.4.0",
     "expo-font": "^11.4.0",
     "expo-image-picker": "^14.3.1",
     "react-native": "0.72.3",
+    "react-native-autocomplete-dropdown": "^3.0.2",
+    "react-native-autocomplete-input": "^5.3.2",
     "react-native-drawer-layout": "^3.2.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.9.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-svg": "^13.10.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "redux": "^4.2.1"
   },
