--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "expo-checkbox": "~2.4.0",
     "expo-font": "^11.4.0",
-    "expo-image-picker": "^14.3.1",
+    "expo-image-picker": "~14.3.1",
+    "react": "^18.2.0",
     "react-native": "0.72.3",
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
