--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.72.3",
     "react-native-autocomplete-dropdown": "^3.0.2",
     "react-native-autocomplete-input": "^5.3.2",
+    "react-native-btr": "^2.2.0",
     "react-native-drawer-layout": "^3.2.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
@@ -42,7 +43,8 @@
     "react-native-svg": "^13.10.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
