--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-btr": "^2.2.0",
     "react-native-drawer-layout": "^3.2.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "^6.2.0",
@@ -43,6 +44,7 @@
     "react-native-svg": "^13.10.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-unordered-list": "^1.0.4",
     "redux": "^4.2.1",
     "socket.io-client": "^4.6.1"
   },
