--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-picker": "^5.6.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.9.1",
